--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,17 @@ a{
 opacity: 0.5;
 }
 .header-info .active{
-  width: 47px;
-  height: 2px;
-  background-color: #d18436;
-  border: none;
+  height: 23px;
+}
+.active::after{
   position: absolute;
-  top: 66%;
-  left: 412px;
+  content: "";
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #d18436;
+  opacity: 1;
 }
 
 .first{
@@ -178,6 +182,7 @@ text-transform: capitalize;
   margin-top: 30px;
   margin-left: 26px;
   width: 30%;
+  height: 260px;
   border: 1px solid rgb(220, 220, 221);
   float: left;
   text-align: center;
